src/test/resources/invalid/typecheck/DotCall_NoReturnValue.vas
class Main is
    this() is
        var a : Array[Integer] = Array[Integer](1)
        a.set(1, 2).set(2, 3)
    end
end